<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_tictoc_profiler</name>
  <version>1.0.0</version>
  <description>ROS2 port of tictoc_profiler by Daniel Maturana</description>
  <maintainer email="azmyin12@gmail.com">Azmyin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

   <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>boost_system</build_depend>
  <build_depend>boost_chrono</build_depend>

  <!-- Dependency for custom message goes here -->
  <!-- These three lines must be present. More details https://docs.ros.org/en/crystal/Tutorials/Custom-ROS2-Interfaces.html-->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Runtime/execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>boost_system</exec_depend>
  <exec_depend>boost_chrono</exec_depend>



  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
